# VTR

vtr_map_manager/: CMakeLists.txt  README.md  package.xml
vtr_map_manager/config/: map_manager_params.yaml  vtr_map_manager_params.yaml
vtr_map_manager/include/vtr_map_manager/: dbow2_wrapper.h  keyframe_clusterer.h  keyframe_node.h  map_expansion.h  map_graph.h
vtr_map_manager/launch/: repeating.launch  teaching.launch  vtr_repeating.launch  vtr_teaching.launch
vtr_map_manager/msg/: GoalList.msg  Keyframe.msg  LoopDetectionResult.msg  MapNode.msg
vtr_map_manager/scripts/: install_dependencies.sh
vtr_map_manager/src/: dbow2_wrapper.cpp  keyframe_clusterer.cpp  keyframe_node.cpp  map_expansion.cpp  map_graph.cpp  map_manager_node.cpp  map_save_load_node.cpp  map_visualizer_node.cpp
vtr_motion_planner/: CMakeLists.txt  README.md  package.xml
vtr_motion_planner/config/: planner_params.yaml
vtr_motion_planner/include/vtr_motion_planner/: goal_list_manager.h  motion_controller.h  occupancy_grid.h  trajectory_generator.h  trajectory_scorer.h
vtr_motion_planner/launch/: vtr_motion_planner.launch
vtr_motion_planner/msg/: GoalList.msg  MotionPlannerStatus.msg  TrajectoryCandidate.msg
vtr_motion_planner/scripts/: mock_phase3.py  test_scoring.py
vtr_motion_planner/src/: goal_list_manager.cpp  motion_controller.cpp  motion_planner_node.cpp  occupancy_grid.cpp  trajectory_generator.cpp  trajectory_scorer.cpp
vtr_motion_planner/srv/: GetGoalList.srv  NotifyOdometry.srv
vtr_perception/: CMakeLists.txt  package.xml
vtr_perception/config/: Mono_IMU.yaml
vtr_perception/include/: IPhase1.h  Keyframe.h
vtr_perception/launch/: phase1.launch
vtr_perception/msg/: Keyframe.msg
vtr_perception/src/: Phase1Node.cpp
vtr_phase3/: README.md
vtr_phase3/src/vtr_relocalization/: CMakeLists.txt  package.xml
vtr_phase3/src/vtr_relocalization/include/vtr_relocalization/: goal_manager.h  pnp_solver.h  relocalization.h  types.h
vtr_phase3/src/vtr_relocalization/launch/: relocalization.launch
vtr_phase3/src/vtr_relocalization/src/: goal_manager.cpp  pnp_solver.cpp  relocalization.cpp  relocalization_node.cpp
vtr_phasel_perception/: CMakeLists.txt  package.xml
vtr_phasel_perception/config/: phase1_params.yaml
vtr_phasel_perception/include/vtr_phase1_perception/: feature_extractor.hpp  keyframe.hpp  keyframe_selector.hpp  openvins_bridge.hpp  perception_node.hpp  stereo_triangulator.hpp
vtr_phasel_perception/launch/: phase1.launch
vtr_phasel_perception/src/: feature_extractor.cpp  keyframe_selector.cpp  openvins_bridge.cpp  perception_node.cpp  stereo_triangulator.cpp
