<?xml version="1.0"?>
<package format="2">
  <name>vtr_relocalization</name>
  <version>0.1.0</version>
  <description>
    VTR Phase 3: Relocalization and Goal List Management.
    Matches live camera frames to the reduced topo-metric map (Phase 2),
    estimates relative pose via Gauss-Newton PnP, and maintains a rolling
    multi-goal list for the motion planner (Phase 4).
  </description>

  <maintainer email="your@email.com">VTR Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS core -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>



  <!-- OpenCV 3.x (ships with ROS Melodic) -->
  <depend>opencv3</depend>

  <export></export>
</package>
